Shifted timeObj state up to weather page for better handling of page coloring, fixed bad useEffects/useEffect dependencies that caused unnecessary refreshes

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -1,4 +1,4 @@
-$dark-primary: #0025cc;
+$dark-primary: #001a8f;
 $dark-background: #020010;
 $dark-secondary: #050029;
 $dark-text-primary: #dad9d7;
@@ -7,10 +7,11 @@ $dark-accent: #0e013e;
 $dark-accent-secondary: #1a005d;
 $dark-blue: #2206b2;
 $light-primary: #4769ff;
+//$light-primary: #5c7aff;
 $light-background: #edebff;
 $light-secondary: #dad6ff;
 $light-text-primary: #151513;
 $light-text-secondary: #2a2928;
 $light-accent: #b09bfd;
 $light-accent-secondary: #a17aff;
-$ligh-blue: #3812f8;
+$light-blue: #3812f8;
