--- a/src/app/components/background/background.module.scss
+++ b/src/app/components/background/background.module.scss
@@ -8,3 +8,8 @@ $background: var(--background);
     bottom: 0;
     display: flex;
 }
+.clockworkWrapper {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
